--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "timer",
   "version": "1.0.0",
-  "description": "",
+  "description": "Time recurring events",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -14,6 +14,9 @@
   "build": {
     "appId": "com.electron.timer",
     "productName": "Timer",
+    "mac": {
+      "category": "public.app-category.utilities"
+    },
     "dmg": {
       "contents": [
         {
