Fix AppImage build

--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
       ]
     },
     "win": {
-      "target": "NSIS",
+      "target": [
+        "NSIS",
+        "portable"
+      ],
       "icon": "build/icon.ico"
     }
   },
@@ -46,6 +49,6 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "^2.0.2",
-    "electron-builder": "^20.15.1"
+    "electron-builder": "20.14.7"
   }
 }
